# liboxia

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  RELEASING.md  SECURITY.md  cbindgen.toml  release-plz.toml
.github/workflows/: ci.yml  publish-crate-names.yml  release-cargo.yml  release-plz.yml
examples/: basic.rs  basic_kv.rs  basic_usage.rs
liboxia-ffi/: Cargo.toml  liboxia_ffi.h
liboxia-ffi/examples/: CMakeLists.txt  example.c
liboxia-ffi/src/: lib.rs
liboxia-ffi/tests/: c_ffi_test.rs
liboxia-ffi/tests/c/: test_ffi.c
liboxia-native/: Cargo.toml  build.rs
liboxia-native/examples/: basic_complex_query.rs  basic_kv.rs  basic_secondary.rs  basic_versioning.rs  metadata_emphemeral.rs  metadata_ephemeral.rs  metadata_notification.rs  streaming_sequence.rs
liboxia-native/src/: address.rs  batch.rs  batch_manager.rs  client.rs  client_builder.rs  client_options.rs  errors.rs  key.rs  lib.rs  notification_manager.rs  operations.rs  provider_manager.rs  sequence_updates_manager.rs  session_manager.rs  shard_manager.rs  write_stream.rs  write_stream_manager.rs
liboxia-native/tests/: integration_tests.rs
oxia-client/: Cargo.toml  build.rs
oxia-client-ffi/: Cargo.toml  oxia_client_ffi.h
oxia-client-ffi/examples/: CMakeLists.txt  example.c
oxia-client-ffi/src/: lib.rs
oxia-client/examples/: README.md  basic_complex_query.rs  basic_kv.rs  basic_secondary.rs  basic_versioning.rs  graceful_shutdown.rs  metadata_ephemeral.rs  metadata_notification.rs  retry_patterns.rs  security_auth.rs  security_tls.rs  streaming_scan.rs  streaming_sequence.rs
oxia-client/src/: address.rs  auth.rs  batch.rs  batch_manager.rs  batcher.rs  client.rs  client_builder.rs  client_options.rs  errors.rs  hash.rs  key.rs  lib.rs  metrics.rs  mock_server.rs  notification_manager.rs  operations.rs  provider_manager.rs  requests.rs  retry.rs  sequence_updates_manager.rs  server_error.rs  session_manager.rs  shard_manager.rs  status.rs  streams.rs  tls.rs  types.rs  write_stream.rs  write_stream_manager.rs
oxia-client/tests/: auth_tests.rs  cluster_tests.rs  integration_tests.rs  interop_tests.rs  java_parity_tests.rs  tls_tests.rs
oxia-client/tests/testdata/: jwt_test_key.pem  jwt_test_pub.pem
oxia-perf/: Cargo.toml
oxia-perf/src/: main.rs
src/: batch.rs  batch_manager.rs  client.rs  client_builder.rs  client_options.rs  errors.rs  lib.rs  operations.rs  provider_manager.rs  shard_manager.rs  write_stream.rs  write_stream_manager.rs
