[workspace]
members = [
    "liboxia-native",
    "liboxia-ffi"
]

[workspace.dependencies]
backoff = { version = "0.4.0", features = ["tokio"] }
tonic = "0.13"
prost = "0.13"
tokio = { version = "1.47.0", features = ["rt-multi-thread", "macros"] }
thiserror = "2.0.12"
dashmap = "6.1.0"
xxhash-rust = { version = "0.8.5", features = ["xxh32", "const_xxh32"] }
uuid = { version = "1.7", features = ["v4"] }
tokio-util = "0.7"
log = "0.4"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tonic-build = "0.13.1"
liboxia = { path = "liboxia-native" }
libc = "0.2"