[workspace]
members = [
    "oxia-client",
    "oxia-client-ffi"
]
resolver = "2"

[workspace.dependencies]
tonic = "0.13"
tonic-types = "0.13"
prost = "0.13"
tokio = { version = "1.47.0", features = ["rt-multi-thread", "macros"] }
thiserror = "2.0.12"
dashmap = "6.1.0"
xxhash-rust = { version = "0.8.5", features = ["xxh3"] }
uuid = { version = "1.7", features = ["v4"] }
tokio-util = "0.7"
arc-swap = "1.7"
bytes = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tonic-build = "0.13.1"
oxia-client = { path = "oxia-client" }
libc = "0.2"
futures = "0.3"