[workspace]
members = [
    "oxia-client",
    "oxia-client-ffi",
    "oxia-perf"
]
resolver = "2"

[workspace.dependencies]
tonic = "0.13"
tonic-types = "0.13"
prost = "0.13"
tokio = { version = "1.47.0", features = ["rt-multi-thread", "macros"] }
thiserror = "2.0.12"
dashmap = "6.1.0"
xxhash-rust = { version = "0.8.5", features = ["xxh3"] }
uuid = { version = "1.7", features = ["v4"] }
tokio-util = "0.7"
arc-swap = "1.7"
bytes = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tonic-build = "0.13.1"
protox = "0.7"
oxia-client = { path = "oxia-client" }
libc = "0.2"
futures = "0.3"
clap = { version = "4", features = ["derive"] }
hdrhistogram = "7"
rand = "0.9"

# Optimize release builds (notably the oxia-perf benchmark binary): whole-program
# LTO and a single codegen unit trade compile time for a faster, smaller binary.
[profile.release]
lto = true
codegen-units = 1
strip = true
