[package]
name = "oxia-client"
version = "0.0.2"
edition = "2021"

description = "Native Rust client SDK for Oxia, a distributed key-value store. Provides an idiomatic, asynchronous API built on Tokio."
license = "Apache-2.0"
repository = "https://github.com/oxia-db/oxia-client-rust"
homepage = "https://github.com/oxia-db/oxia-client-rust"

[lib]
name = "oxia"

[dependencies]
tonic = { workspace = true }
prost = { workspace = true }
tokio = { workspace = true }
thiserror = { workspace = true }
dashmap = { workspace = true }
xxhash-rust = { workspace = true }
uuid = { workspace = true }
tokio-util = { workspace = true }
arc-swap = { workspace = true }
log = { workspace = true }

[dev-dependencies]
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
testcontainers = "0.23"
testcontainers-modules = "0.11"
tokio-test = "0.4"

[build-dependencies]
tonic-build = { workspace = true }