[package]
name = "oxia-client"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"

description = "Native Rust client SDK for Oxia, a distributed key-value store. Provides an idiomatic, asynchronous API built on Tokio."
license = "Apache-2.0"
repository = "https://github.com/oxia-db/oxia-client-rust"
homepage = "https://github.com/oxia-db/oxia-client-rust"
documentation = "https://docs.rs/oxia-client"
readme = "../README.md"
keywords = ["oxia", "client", "key-value", "metadata", "grpc"]
categories = ["database", "api-bindings", "asynchronous"]

[lib]
name = "oxia"

[dependencies]
tonic = { workspace = true }
prost = { workspace = true }
tokio = { workspace = true }
thiserror = { workspace = true }
dashmap = { workspace = true }
xxhash-rust = { workspace = true }
uuid = { workspace = true }
tokio-util = { workspace = true }
arc-swap = { workspace = true }
bytes = { workspace = true }
futures = { workspace = true }
tracing = { workspace = true }
tonic-types = { workspace = true }

[dev-dependencies]
tracing-subscriber = { workspace = true }
testcontainers = "0.23"
testcontainers-modules = "0.11"
tokio-test = "0.4"

[build-dependencies]
tonic-build = { workspace = true }
